--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Link in bio website for Gringo Media" />
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>Connect | Gringo Media</title>
 </head>
 
